parser/tests/success/test4.cgo
package main

import "fmt"

func (ts *test)foo(ch capchan int) {
	v2 := <--ch
	fmt.Println(v2)
}

func main() {
	ch := make(capchan int)
	v1 := 42
	ch<+-ts
	go ts.foo(ch)
	ch <-- v1
}
